# my_tiny_renderer

./: .gitignore  CMakeLists.txt  readme.md  todo.todo
include/my_tiny_renderer/: Box.hpp  Camera.hpp  Color.hpp  Exception.hpp  Image.hpp  ImageBuffer.hpp  Light.hpp  Math.hpp  Model.hpp  MyGL.hpp  RenderTarget.hpp  Scene.hpp  Shape.hpp  Transform.hpp  VertexAttribSpecifier.hpp  VertexDataSet.hpp  VertexGroup.hpp
src/: Box.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  Image.cpp  ImageBuffer.cpp  Light.cpp  Math.cpp  Model.cpp  MyGL.cpp  RenderTarget.cpp  Scene.cpp  Shape.cpp  Transform.cpp  VertexAttribSpecifier.cpp  VertexDataSet.cpp  VertexGroup.cpp
tests/: CMakeLists.txt  test_color.cpp  test_draw_cube.cpp  test_draw_human_head.cpp  test_draw_line.cpp  test_draw_triangle.cpp  test_draw_triangle_order.cpp  test_draw_wireframe.cpp  test_flip.cpp  test_png.cpp  test_textured_triangle.cpp
